--- a/HaikuRatingSystem/HaikuRatingSystem.Client/HaikuRatingSystem.Client.csproj
+++ b/HaikuRatingSystem/HaikuRatingSystem.Client/HaikuRatingSystem.Client.csproj
@@ -69,8 +69,9 @@
     <Content Include="js\common\data.js" />
     <Content Include="js\haikus\all-haikus-directive.js" />
     <Content Include="js\haikus\haiku-details-controller.js" />
-    <Content Include="js\haikus\publishHaikus-controller.js" />
-    <Content Include="js\users\user-viewmodel.js" />
+    <Content Include="js\haikus\haiku-publish-controller.js" />
+    <Content Include="js\haikus\haikus-reported-controller.js" />
+    <Content Include="js\users\user-details-controller.js" />
     <Content Include="js\users\users-controller.js" />
     <Content Include="js\haikus\haikus-controller.js" />
     <Content Include="js\home\home-controller.js" />
@@ -120,11 +121,12 @@
     <Content Include="views\directives\all-haikus-directive.html" />
     <Content Include="views\directives\all-users-directive.html" />
     <Content Include="views\partials\haikus\haikuDetails.html" />
+    <Content Include="views\partials\haikus\reportedHaikus.html" />
     <Content Include="views\partials\haikus\publishHaiku.html" />
     <Content Include="views\partials\haikus\haikus.html" />
     <Content Include="views\partials\home\home.html" />
     <Content Include="views\partials\identity\register.html" />
-    <Content Include="views\partials\users\user.html" />
+    <Content Include="views\partials\users\userDetails.html" />
     <Content Include="views\partials\users\users.html" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
